<resources>
    <string name="title_fragment_info">About</string>
    <string name="info_readme">ReadMe.txt</string>
    <string name="title_web_fragment_info">Help</string>
    <string name="help_url">file:///android_asset/Emu48.htm</string>
	<string name="dialog_common_settings_title">Common Settings</string>
	<string name="dialog_state_settings_title">Settings (Saved in state file)</string>
	<string name="menu_settings_reset_to_default">Reset to Default</string>
	<string name="menu_settings_reset_to_common">Reset to Common</string>
    <string name="app_name">Emu48</string>
    <string name="filename">emu48</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button_main_menu_content_description">Open the main menu</string>
    <string name="nav_new">New...</string>
    <string name="nav_open">Open...</string>
    <string name="nav_save">Save</string>
    <string name="nav_save_as">Save As...</string>
    <string name="nav_close">Close</string>
    <string name="nav_load_object">Load Object...</string>
    <string name="nav_save_object">Save Object...</string>
    <string name="nav_copy_screen">Copy Screen</string>
    <string name="nav_copy_fullscreen">Copy Fullscreen</string>
	<string name="nav_copy_stack_visible">Copy Visible Stack</string>
    <string name="nav_copy_stack">Copy Stack</string>
    <string name="nav_recents">Recent</string>
    <string name="nav_edit">Edit</string>
    <string name="nav_paste_stack">Paste Stack</string>
    <string name="nav_reset_calculator">Reset Calculator</string>
    <string name="nav_save_backup">Save Backup</string>
    <string name="nav_restore_backup">Restore Backup</string>
    <string name="nav_delete_backup">Delete Backup</string>
    <string name="nav_view">View</string>
    <string name="nav_change_kml_script">Change KML Script...</string>
    <string name="nav_show_kml_script_compilation_result">Show KML Script Compilation Result</string>
    <string name="nav_show_printer">Show the Printer Simulator...</string>
    <string name="nav_virtual_keyboard">Virtual Keyboard</string>
    <string name="nav_tool">Tool</string>
	<string name="nav_create_ram_card">Create RAM Card (HP48)...</string>
	<string name="nav_manage_flash_rom">Manage Flash ROM (HP49)...</string>
    <string name="nav_macro_record">Record Macro...</string>
    <string name="nav_macro_play">Play Macro...</string>
    <string name="nav_macro_stop">Macro Stop</string>
    <string name="nav_help">Help</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_about">About Emu48...</string>
    <string name="load_custom_kml">[Select a Custom KML script folder...]</string>
    <string name="load_default_kml">[Default KML script folder]</string>
	<string name="pick_default_calculator">Pick a default calculator</string>
	<string name="pick_custom_calculator">Pick a custom calculator</string>
    <string name="dialog_printer_simulator_title">Printer Simulator</string>
    <string name="tab_printer_textual">Text</string>
    <string name="tab_printer_graphical">Graphic</string>
    <string name="menu_printer_simulator_share_text">Share Text</string>
    <string name="menu_printer_simulator_share_graphic">Share Graphic</string>
    <string name="menu_printer_simulator_change_paper">Change Paper (Erase)</string>
	<string name="create_ram_card_title">Create RAM Card</string>
	<string name="ram_cards_item_0">32kb (1 port: 2)</string>
	<string name="ram_cards_item_1">128kb (1 port: 2)</string>
	<string name="ram_cards_item_2">256kb (2 ports: 2,3)</string>
	<string name="ram_cards_item_3">512kb (4 ports: 2 through 5)</string>
	<string name="ram_cards_item_4">1mb (8 ports: 2 through 9)</string>
	<string name="ram_cards_item_5">2mb (16 ports: 2 through 17)</string>
	<string name="ram_cards_item_6">4mb (32 ports: 2 through 33)</string>
	<string name="alert_manage_flash_rom_description">The following actions may reset the calculator without losing the memory.</string>
	<string name="alert_manage_flash_rom_button_create">Create Flash ROM file from current KML...</string>
	<string name="alert_manage_flash_rom_button_load">Load Flash ROM file...</string>
	<string name="alert_manage_flash_rom_button_reset">Reset Flash ROM to default KML settings</string>
	<string name="alert_manage_flash_rom_button_cancel">Cancel</string>
	<string name="alert_losing_flash_rom_title">Are you sure?</string>
	<string name="alert_losing_flash_rom_message">You already have a loaded flash ROM file. Are you sure to replace its?</string>
	<string name="alert_load_new_flash_rom_title">Load New Flash ROM?</string>
	<string name="alert_load_flash_rom_error_title">Error when Loading Flash ROM</string>
	<string name="alert_load_flash_rom_error_message">Cannot load the Flash ROM. Reset to the default Flash ROM (from the current KML script). Please, try to load it again from the menu.</string>
    <string name="message_open_security">Permission Denied</string>
	<string name="message_open_security_open_last_document">Permission denied to open the last calculator state file.</string>
    <string name="message_open_security_description">For security reason, you must select the folder where are the KML and ROM files, please.</string>
    <string name="message_open_security_retry">Please, open again</string>
    <string name="message_open_security_retry_description">I hope now you could open again the state file.</string>
	<string name="message_open_kml_folder_permission_lost">Permission denied to access to the previously saved KML folder. Switch to the default embedded KML folder.</string>
	<string name="message_open_kml_not_found">KML Script not Found</string>
	<string name="message_open_kml_not_found_description">You must select the folder where are the KML and ROM files, please.</string>
	<string name="message_open_kml_not_found_description2">The KML script "%s" cannot be found. You must select the folder where are the KML and ROM files, please.</string>
	<string name="message_open_kml_not_found_description3">The KML script "%s" cannot be found in the folder "%s". You must select the folder where are the KML and ROM files, please.</string>
	<string name="message_open_kml_not_found_alert_trying_other1">Existing KML script not found. Trying the compatible script: %s</string>
	<string name="message_open_kml_not_found_alert_trying_other2">"Existing KML script not found. Trying the embedded and compatible script: %s"</string>
	<string name="message_open_kml_not_found_alert">"Cannot find the KML template file, sorry."</string>
	<string name="message_open_port2_file_not_found">Port 2 File not Found</string>
	<string name="message_open_port2_file_not_found_description">The port 2 file "%s" cannot be found. You should select it again, please.</string>
    <string name="message_state_saved">State saved in %s</string>
	<string name="message_state_and_flash_saved">State %s and flash %s saved</string>
    <string name="message_do_you_want_to_save">Do you want to save changes?\n(BACK to cancel)</string>
    <string name="message_save_new_file">Do you want to save this new state file?\n(To avoid losing the state of the machine)</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="message_ok">OK</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_object_load">Warning: Trying to load an object while the emulator is busy will certainly result in a memory lost. Before loading an object you should be sure that the calculator is in idle state. Do you want to see this warning next time you try to load an object?</string>
    <string name="message_object_save_program">Select Program</string>
    <string name="message_screenshot">Screenshot</string>
    <string name="message_share_screenshot">Share the screenshot</string>
    <string name="message_press_reset">Are you sure you want to press the Reset Button?</string>
    <string name="message_change_kml">You cannot change the KML script when Emulator is not running. Use the File, New menu item to create a new calculator.</string>
    <string name="message_kml_script_compilation_result">KML Script Compilation Result</string>
    <string name="message_kml_folder_selection_need_api_lollipop">Need Android 5.0</string>
    <string name="message_kml_folder_selection_need_api_lollipop_description">To select the KML folder, you need at least Android version 5.0</string>
    <string name="message_printer">Printer Simulator</string>
    <string name="message_printer_share_text">Save printer paper as text</string>
    <string name="message_printer_share_graphic">Save printer paper as image</string>
    <string name="message_printer_out_of_paper">Out of paper error for the graphic printer (max line: %d, max pixel line: %d).</string>
    <string name="message_change_overlapping_lcd_mode_to_manual">The overlapping LCD mode has been changed to "Manual".</string>
    <string name="message_change_overlapping_lcd_mode_to_auto">The overlapping LCD mode has been changed to "Auto".</string>
	<string name="message_persisting_security_error">Permission issue: </string>
	<string name="serial_fragment_title">USB Devices</string>
	<string name="serial_device_list_header">USB Devices</string>
	<string name="serial_no_device">no USB devices found</string>
	<string name="serial_ports_device">%s (%04X:%04X) [%d]</string>
	<string name="serial_ports_device_no_driver">No driver</string>
	<string name="serial_ports_device_item_title">%s, Port %d</string>
	<string name="serial_ports_device_item_description">Vendor %04X, Product %04X</string>
	<string name="serial_connection_succeeded">USB serial device connected.</string>
	<string name="serial_disconnection_succeeded">USB serial device disconnected.</string>
	<string name="serial_connection_failed_device_not_found">Failed to connect the USB serial device: device not found (check the settings).</string>
	<string name="serial_connection_failed_no_driver_for_device">Failed to connect the USB serial device: no driver for device (check the settings).</string>
	<string name="serial_connection_failed_not_enough_ports_at_device">Failed to connect the USB serial device: not enough ports at device (check the settings).</string>
	<string name="serial_connection_failed_user_has_not_given_permission">Failed to connect the USB serial device: user has not given permission.</string>
	<string name="serial_connection_failed_for_unknown_reason">Failed to connect the USB serial device: for unknown reason.</string>
	<string name="serial_connection_failed_permission_denied">Failed to connect the USB serial device: permission denied.</string>
	<string name="serial_connection_failed_open_device_failed">Failed to connect the USB serial device: open device failed.</string>
	<string name="serial_connection_failed_open_failed">Failed to connect the USB serial device: open failed.</string>
	<string name="settings_category_general_title">General</string>
    <string name="settings_realspeed_title">Authentic Calculator Speed</string>
    <string name="settings_grayscale_title">Enable Virtual LCD Delay</string>
    <string name="settings_autosave_title">Automatically Save Files</string>
    <string name="settings_objectloadwarning_title">Show Load Object Warning</string>
    <string name="settings_alwaysdisplog_title">Always Show KML Compilation Result</string>
    <string name="settings_category_ui_title">UI</string>
    <string name="settings_auto_layout_title">Layout</string>
    <string name="settings_auto_layout_summary">Following the calculator screen ratio and the current device orientation, find the best layout compromise</string>
	<string name="settings_auto_layout_item_0">None</string>
</resources>